# MagicVLM

./: .gitignore  README.md  build.gradle  tree.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main - Copy (2).cpp  main - Copy (3).cpp  main - Copy (4).cpp  main - Copy (5).cpp  main - Copy (6).cpp  main - Copy.cpp  main -encoder loaded.cpp  main -onnnx version print.cpp  main.cpp  meshing_material.h
app/src/main/res/values/: strings.xml
